--- a/views/en/mixins.jade
+++ b/views/en/mixins.jade
@@ -25,7 +25,7 @@ mixin fileDropper
 
 mixin images(files)
     h3 Images
-    div Drop images and other media in the content editing area.
+    div.imagesDesc Drop images and other media in the content editing area.
     ul#images.images.plain-list
         for file in files
             li 
